Add Supabase persistent storage

--- a/TODO
+++ b/TODO
@@ -1,6 +1,37 @@
 Sign-in
-    - No account exists
-    - Incorrect password
+    - No account exists with this email address, make darker font color
+
+Staff
+    Dashboard
+        - Patient list details
+    Appointment
+        - Remove Staff action. Redundant with Add Walk-in Patient
+        WalkInPatient.tsx
+            handleAppointmentConfirm status defaults to pending
+Dentist
+    Appointment
+        - Remove Staff action
+        - Can only view permission
+
+       
+        
+
+
+Nice to have:
+    Patient
+        Dashboard
+            Total Visits Details
+            Treatment Details
+        My Profile
+            Enable Password Change
+    Staff
+        Appointment
+            Reschedule confirmed appointment
+            
+
+
+
+#################################################################    
 
 Appointment Type
     - Remove Type
@@ -8,17 +39,9 @@ Appointment Type
         Dentists: Add note
         Staff: Complete, Cancel, Reschedule, Confirm
 
-Sign-out
-    - Okay
 
-BookAppointment
-    - No date and time, No dentists. Staff is only allowed to input this on confirmation.
 
-Staff
-    - ConfirmedBooking: Add date, dentist and possible time.
-    - Only Staff can book walk-in Patient. Appointment is confirmed based on aggrement otherwise no.
-      Patient at this stage is recorde already to database but are unable to login.
-      Patient need to register themselves
+
 
 AppointmentNote
     - should put author of note. Patient, Staff or Dentist.  
@@ -26,9 +49,4 @@ AppointmentNote
 Service
     - determined after physical checkup. Should not be in booking appointment.
 
-ProfileUpdate
-    - should be written to persistent storage.    
-
-SystemAdminUser
-    - Can only create staff and dentist users.
     
